# anotherAsterisk

./: .env.example  .gitignore  ARCHITECTURE.md  ASTERISK_UPGRADE.md  README.md  config.yaml  pyproject.toml
src/asterisk/: __init__.py  agent.py  browser.py  cli.py  config.py  mode_selector.py  token_counter.py
src/asterisk/llm/: __init__.py  adapter.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
src/asterisk/tools/: __init__.py  bash_tool.py  computer_tool.py  file_tool.py
src/asterisk/wiki/: __init__.py  observation_extractor.py  reader.py  resolver.py  writer.py
tests/: conftest.py  test_config.py  test_integration.py  test_observation_extractor.py  test_reader.py  test_resolver.py  test_token_counter.py  test_writer.py
