[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "another-asterisk"
version = "0.1.0"
description = "Agentic computer-use framework with O(N) cost via wiki-regulated context"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
asterisk = "asterisk.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asterisk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
